Part-2, Part-3 combined

--- a/Week3-2-capstone.ipynb
+++ b/Week3-2-capstone.ipynb
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -761,14 +761,16 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\n",
-      "CLIENT_SECRET:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\n"
+      "CLIENT_ID: W22FMF3HXXQVKKUX1F5YR00P3GISWYVNHCML4VXB1OGUNKCB\n",
+      "CLIENT_SECRET:11O5TGCCU5BRL2YVZ53DV2GEIW1JVEJY4G5YKVSERCTMWEGF\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX' # Foursquare ID hidden\n",
-    "CLIENT_SECRET = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX' # Foursquare Secret hidden\n",
+    "CLIENT_ID = 'W22FMF3HXXQVKKUX1F5YR00P3GISWYVNHCML4VXB1OGUNKCB' # your Foursquare ID\n",
+    "CLIENT_SECRET = '11O5TGCCU5BRL2YVZ53DV2GEIW1JVEJY4G5YKVSERCTMWEGF' # your Foursquare Secret\n",
+    "# CLIENT_ID = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX' # Foursquare ID hidden\n",
+    "# CLIENT_SECRET = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX' # Foursquare Secret hidden\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
@@ -778,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,8 +887,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
-   "metadata": {},
+   "execution_count": 439,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -902,7 +906,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'reasons': {'count': 0,\n",
+       "   'items': [{'summary': 'This spot is popular',\n",
+       "     'type': 'general',\n",
+       "     'reasonName': 'globalInteractionReason'}]},\n",
+       "  'venue': {'id': '4e77e3861f6ecf8d3648300c',\n",
+       "   'name': 'Starbucks',\n",
+       "   'location': {'address': '637 Kingston Rd.',\n",
+       "    'crossStreet': 'at Main St.',\n",
+       "    'lat': 43.67879837444001,\n",
+       "    'lng': -79.2980449760153,\n",
+       "    'labeledLatLngs': [{'label': 'display',\n",
+       "      'lat': 43.67879837444001,\n",
+       "      'lng': -79.2980449760153}],\n",
+       "    'distance': 486,\n",
+       "    'postalCode': 'M4E 1R3',\n",
+       "    'cc': 'CA',\n",
+       "    'city': 'Toronto',\n",
+       "    'state': 'ON',\n",
+       "    'country': 'Canada',\n",
+       "    'formattedAddress': ['637 Kingston Rd. (at Main St.)',\n",
+       "     'Toronto ON M4E 1R3',\n",
+       "     'Canada']},\n",
+       "   'categories': [{'id': '4bf58dd8d48988d1e0931735',\n",
+       "     'name': 'Coffee Shop',\n",
+       "     'pluralName': 'Coffee Shops',\n",
+       "     'shortName': 'Coffee Shop',\n",
+       "     'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/coffeeshop_',\n",
+       "      'suffix': '.png'},\n",
+       "     'primary': True}],\n",
+       "   'photos': {'count': 0, 'groups': []}},\n",
+       "  'referralId': 'e-0-4e77e3861f6ecf8d3648300c-0'},\n",
+       " {'reasons': {'count': 0,\n",
+       "   'items': [{'summary': 'This spot is popular',\n",
+       "     'type': 'general',\n",
+       "     'reasonName': 'globalInteractionReason'}]},\n",
+       "  'venue': {'id': '4b8daea1f964a520480833e3',\n",
+       "   'name': 'Grover Pub and Grub',\n",
+       "   'location': {'address': '676 Kingston Rd.',\n",
+       "    'crossStreet': 'at Main St.',\n",
+       "    'lat': 43.679181434941015,\n",
+       "    'lng': -79.29721535878515,\n",
+       "    'labeledLatLngs': [{'label': 'display',\n",
+       "      'lat': 43.679181434941015,\n",
+       "      'lng': -79.29721535878515}],\n",
+       "    'distance': 460,\n",
+       "    'postalCode': 'M4E 1R4',\n",
+       "    'cc': 'CA',\n",
+       "    'city': 'Toronto',\n",
+       "    'state': 'ON',\n",
+       "    'country': 'Canada',\n",
+       "    'formattedAddress': ['676 Kingston Rd. (at Main St.)',\n",
+       "     'Toronto ON M4E 1R4',\n",
+       "     'Canada']},\n",
+       "   'categories': [{'id': '4bf58dd8d48988d11b941735',\n",
+       "     'name': 'Pub',\n",
+       "     'pluralName': 'Pubs',\n",
+       "     'shortName': 'Pub',\n",
+       "     'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/nightlife/pub_',\n",
+       "      'suffix': '.png'},\n",
+       "     'primary': True}],\n",
+       "   'photos': {'count': 0, 'groups': []}},\n",
+       "  'referralId': 'e-0-4b8daea1f964a520480833e3-1'},\n",
+       " {'reasons': {'count': 0,\n",
+       "   'items': [{'summary': 'This spot is popular',\n",
+       "     'type': 'general',\n",
+       "     'reasonName': 'globalInteractionReason'}]},\n",
+       "  'venue': {'id': '4df91c4bae60f95f82229ad5',\n",
+       "   'name': 'Upper Beaches',\n",
+       "   'location': {'lat': 43.68056321147582,\n",
+       "    'lng': -79.2928688743688,\n",
+       "    'labeledLatLngs': [{'label': 'display',\n",
+       "      'lat': 43.68056321147582,\n",
+       "      'lng': -79.2928688743688}],\n",
+       "    'distance': 468,\n",
+       "    'cc': 'CA',\n",
+       "    'city': 'Toronto',\n",
+       "    'state': 'ON',\n",
+       "    'country': 'Canada',\n",
+       "    'formattedAddress': ['Toronto ON', 'Canada']},\n",
+       "   'categories': [{'id': '4f2a25ac4b909258e854f55f',\n",
+       "     'name': 'Neighborhood',\n",
+       "     'pluralName': 'Neighborhoods',\n",
+       "     'shortName': 'Neighborhood',\n",
+       "     'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/parks_outdoors/neighborhood_',\n",
+       "      'suffix': '.png'},\n",
+       "     'primary': True}],\n",
+       "   'photos': {'count': 0, 'groups': []}},\n",
+       "  'referralId': 'e-0-4df91c4bae60f95f82229ad5-2'}]"
+      ]
+     },
+     "execution_count": 443,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = requests.get(url).json()[\"response\"]['groups'][0]['items']\n",
+    "results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,30 +1061,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Beaches\n"
-     ]
-    },
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-415-3c5c277527d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m toronto_venues = getNearbyVenues(names=geo_spatial_df_sub['Neighbourhood'],\n\u001b[1;32m      2\u001b[0m                                    \u001b[0mlatitudes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgeo_spatial_df_sub\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m                                    \u001b[0mlongitudes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgeo_spatial_df_sub\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m                                   )\n",
-      "\u001b[0;32m<ipython-input-414-d194f1c67c83>\u001b[0m in \u001b[0;36mgetNearbyVenues\u001b[0;34m(names, latitudes, longitudes, radius)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;31m# make the GET request\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"response\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'groups'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# return only relevant information for each nearby venue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/requests/models.py\u001b[0m in \u001b[0;36mjson\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    890\u001b[0m                     \u001b[0;31m# used.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    891\u001b[0m                     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 892\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcomplexjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    893\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    352\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    353\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[0;32m--> 354\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    355\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    356\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    337\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    338\u001b[0m         \"\"\"\n\u001b[0;32m--> 339\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    340\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    355\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    356\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 357\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Expecting value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    358\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+      "The Beaches\n",
+      "The Danforth West, Riverdale\n",
+      "The Beaches West, India Bazaar\n",
+      "Studio District\n",
+      "Lawrence Park\n",
+      "Davisville North\n",
+      "North Toronto West\n",
+      "Davisville\n",
+      "Moore Park, Summerhill East\n",
+      "Deer Park, Forest Hill SE, Rathnelly, South Hill, Summerhill West\n",
+      "Rosedale\n",
+      "Cabbagetown, St. James Town\n",
+      "Church and Wellesley\n",
+      "Harbourfront, Regent Park\n",
+      "Ryerson, Garden District\n",
+      "St. James Town\n",
+      "Berczy Park\n",
+      "Central Bay Street\n",
+      "Adelaide, King, Richmond\n",
+      "Harbourfront East, Toronto Islands, Union Station\n",
+      "Design Exchange, Toronto Dominion Centre\n",
+      "Commerce Court, Victoria Hotel\n",
+      "Roselawn\n",
+      "Forest Hill North, Forest Hill West\n",
+      "The Annex, North Midtown, Yorkville\n",
+      "Harbord, University of Toronto\n",
+      "Chinatown, Grange Park, Kensington Market\n",
+      "CN Tower, Bathurst Quay, Island airport, Harbourfront West, King and Spadina, Railway Lands, South Niagara\n",
+      "Stn A PO Boxes 25 The Esplanade\n",
+      "First Canadian Place, Underground city\n",
+      "Christie\n",
+      "Dovercourt Village, Dufferin\n",
+      "Little Portugal, Trinity\n",
+      "Brockton, Exhibition Place, Parkdale Village\n",
+      "High Park, The Junction South\n",
+      "Parkdale, Roncesvalles\n",
+      "Runnymede, Swansea\n",
+      "Business reply mail Processing Centre969 Eastern\n"
      ]
     }
    ],
